decode event
